--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "redux-logger": "^3.0.6",
     "webpack": "^2.6.1"
   },
   "dependencies": {
