--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "redux-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "reduxproj",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "redux-logger": "^3.0.6",
     "webpack": "^2.6.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
     "express": "^4.15.3",
+    "jade": "~1.11.0",
+    "mongoose": "^4.10.6",
+    "morgan": "~1.8.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "serve-favicon": "~2.4.2"
   }
 }
